[package]
name = "rangerine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fsutils = "0.1.7"
glob = "0.3.0"
include_dir = "0.7.3"
mime_guess = "2.0.4"
notify = "5.0.0"
once_cell = "1.16.0"
rouille = "3.6.1"
